--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "apollo-client": "^2.6.10",
     "apollo-link": "^1.2.14",
     "apollo-link-error": "^1.1.13",
+    "axios": "^0.21.0",
     "cookie-universal-nuxt": "^2.1.4",
     "core-js": "^2.6.11",
     "graphql": "^15.3.0",
